--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         }
     },
     "require": {
-        "erusev/parsedown": "^1.7"
+        "erusev/parsedown": "^1.7",
+        "fakerphp/faker": "^1.17",
+        "davidbadura/faker-markdown-generator": "^1.1"
     }
 }
