remove Subtractor.php Summator.php TestCron.php and do some refactoring in MainController

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .idea
 /vendor/
 /logs/
+/www/lesson-profi.php
+#/src/MyProject/Cli/Subtractor.php
+#/src/MyProject/Cli/Summator.php
+#/src/MyProject/Cli/TestCron.php
